new calico rules

--- a/iks/allow-traffic-from-my-ip.yml
+++ b/iks/allow-traffic-from-my-ip.yml
@@ -10,21 +10,22 @@ spec:
   - action: Allow
     destination:
       nets:
-      # IPs Ingress subdomain from cfee3-eu-demo cluster
-      # dig cfee3-eu-demo-cluster.eu-de.containers.appdomain.cloud
-      - 158.177.180.90/32
-      - 161.156.120.78/32
+      # IPs of (ALB) Automatic Load Balancer (a.k.a Ingress)
+      # CLI: kubectl get ingress
+      - 169.50.19.214/32
+      - 161.156.130.142/32
+      - 149.81.67.38/32
       ports:
       - 80
       - 443
     protocol: TCP
     source:
       nets:
-      - 78.207.202.120/32
+      -  78.207.202.120/32
       ports:
       - 80
       - 443
-  selector: ibm.role =='worker_public'
-  order: 500
+  selector: ibm.role == 'worker_public'
+  order: 2000
   types:
   - Ingress
