--- a/iks/allow-ingress-cloudflare-ips.yml
+++ b/iks/allow-ingress-cloudflare-ips.yml
@@ -9,6 +9,8 @@ spec:
   - action: Allow
     destination:
       nets:
+      # IPs of (ALB) Automatic Load Balancer (a.k.a Ingress)
+      # CLI: dig <cluster-name>.eu-de.containers.appdomain.cloud      
       - 158.177.180.90/32
       - 161.156.120.78/32
       ports:
