--- a/iks/deny-alb-cfee3.yml
+++ b/iks/deny-alb-cfee3.yml
@@ -11,7 +11,7 @@ spec:
     destination:
       nets:
       # IPs of (ALB) Automatic Load Balancer (a.k.a Ingress)
-      # CLI: kubectl get ingress
+      # CLI: dig <cluster-name>.eu-de.containers.appdomain.cloud
       - 158.177.180.90/32
       - 161.156.120.78/32
       ports:
