final ocp script

--- a/local.env.example
+++ b/local.env.example
@@ -5,6 +5,9 @@
 # Person to invite
 export EMAIL=
 
+# Resource Group
+export RESOURCE_GROUP_NAME=
+
 # Cluster Name, find it with "ibmcloud ks clusters"
 export CLUSTER_NAME=
 
