--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 local.env
+iam/account-darmon-users.txt
 iam/account-user-parent-list.csv
+iam/account-user-parent-list-rh.csv
 iam/rh-demo-list-users.txt
