--- a/openshift/openshift-rbac3-rolebinding.yml
+++ b/openshift/openshift-rbac3-rolebinding.yml
@@ -2,11 +2,11 @@ kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: operators-edit2
-  namespace: lab-droinpy
+  namespace: lab-mace
 subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
-    name: 'IAM#DROINPY@fr.ibm.com'
+    name: 'IAM#lionel.mace@gmail.com'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
