--- a/local.env.example
+++ b/local.env.example
@@ -2,8 +2,8 @@
 # Variables that should change per event
 ##########################################################
 
-# Person to invite
-export EMAIL=
+# Person(s) to invite
+export EMAIL="firstname@fr.ibm.com lastname@gmail.com"
 
 # Resource Group
 export RESOURCE_GROUP_NAME=
@@ -14,5 +14,5 @@ export CLUSTER_NAME=
 # Account ID, find it with "ibmcloud account show"
 export ACCOUNT_ID=
 
-# Your IBMC Cloud API key, create one with "ibmcloud iam api-key-create NAME"
+# Your IBM Cloud API key, create one with "ibmcloud iam api-key-create NAME"
 export APIKEY=
