Extract user with filter

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ local.env
 iam/account-darmon-users.txt
 iam/account-user-parent-list.csv
 iam/account-user-parent-list-rh.csv
-iam/rh-demo-list-users.txt
+iam/account_users.txt
