--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ iam/account-darmon-users.txt
 iam/account-user-parent-list.csv
 iam/account-user-parent-list-rh.csv
 iam/account_users.txt
+satellite/satellite.env
