--- a/satellite/satellite.env.template
+++ b/satellite/satellite.env.template
@@ -3,12 +3,12 @@
 ##########################################################
 
 # Resource Group
-export RG_NAME=satellite2
+export RG_NAME=YOUR_RESOURCE_GROUP_NAME
 
 ##########################################################
 # Info: Satellite
 ##########################################################
-export SAT_LOCATION_NAME=descollonges
+export SAT_LOCATION_NAME=YOUR_SATELLITE_LOCATION_NAME
 export SAT_MANAGED_FROM=lon
 export COUNT_START=01
 export COUNT_END=03
@@ -19,10 +19,10 @@ export COUNT_END=03
 ##########################################################
 
 # Use an existing VPC or give a name for a new one
-export VPC_NAME=vpc-satellite2
+export VPC_NAME=YOUR_VPC_NAME
 export VPC_ZONE=eu-de
-# Use an existing subnet or or give a name for a new one
-export SUBNET_NAME=subnet-satellite-eu-de-1
+# Use an existing subnet or give a name for a new one
+export SUBNET_NAME=YOUR_SUBNET_NAME
 
 # Minimum size required for Satellite
 export VSI_PROFILE=bx2-4x16
