--- a/satellite/satellite.env
+++ b/satellite/satellite.env
@@ -3,12 +3,14 @@
 ##########################################################
 
 # Resource Group
-export RG_NAME=satellite2
+export RG_NAME=satellite
 
 ##########################################################
 # Info: Satellite
 ##########################################################
-export SAT_LOCATION_NAME=descollonges
+export SAT_LOCATION_NAME=nice #required
+export SAT_COS_BUCKET_NAME=cos-satellite-bucket #required
+export SAT_COS_INSTANCE_NAME=cos-satellite
 export SAT_MANAGED_FROM=lon
 export COUNT_START=01
 export COUNT_END=03
@@ -19,7 +21,7 @@ export COUNT_END=03
 ##########################################################
 
 # Use an existing VPC or give a name for a new one
-export VPC_NAME=vpc-satellite2
+export VPC_NAME=vpc-satellite
 export VPC_ZONE=eu-de
 # Use an existing subnet or or give a name for a new one
 export SUBNET_NAME=subnet-satellite-eu-de-1
