--- a/satellite/satellite.env.template
+++ b/satellite/satellite.env.template
@@ -9,6 +9,8 @@ export RG_NAME=YOUR_RESOURCE_GROUP_NAME
 # Info: Satellite
 ##########################################################
 export SAT_LOCATION_NAME=YOUR_SATELLITE_LOCATION_NAME
+export SAT_COS_BUCKET_NAME=cos-satellite-bucket
+export SAT_COS_INSTANCE_NAME=cos-satellite
 export SAT_MANAGED_FROM=lon
 export COUNT_START=01
 export COUNT_END=03
