--- a/local.env.example
+++ b/local.env.example
@@ -5,6 +5,9 @@
 # Person(s) to invite
 export EMAIL="firstname@fr.ibm.com lastname@gmail.com"
 
+# Region
+export IBMCLOUD_REGION=eu-de
+
 # Resource Group
 export RESOURCE_GROUP_NAME=
 
