--- a/satellite/satellite.env.template
+++ b/satellite/satellite.env.template
@@ -1,37 +1,24 @@
-##########################################################
-# Variables that should change for Satellite
-##########################################################
-
-# Resource Group
-export RG_NAME=YOUR_RESOURCE_GROUP_NAME
 
 ##########################################################
-# Info: Satellite
+# Satellite
 ##########################################################
-export SAT_LOCATION_NAME=YOUR_SATELLITE_LOCATION_NAME
-export SAT_COS_BUCKET_NAME=cos-satellite-bucket
-export SAT_COS_INSTANCE_NAME=cos-satellite
+
+export LOCATION_NAME=YOUR_LOCATION_NAME
+
 export SAT_MANAGED_FROM=lon
+
+# Minimum vCPU/RAM size
+export VSI_PROFILE=bx2-4x16
+
+# Operationg System: ibm-redhat-7-0-64-minimal-for-vsi
+export VSI_IMAGE_ID=a573bfb9-4e55-481f-9060-31d757155ded 
+
+# Number of control planes/workers
 export COUNT_START=01
 export COUNT_END=03
 
-
-##########################################################
-# Info: VPC, VSI
-##########################################################
-
-# Use an existing VPC or give a name for a new one
-export VPC_NAME=YOUR_VPC_NAME
+# Region to provision the VSIs
 export VPC_ZONE=eu-de
-# Use an existing subnet or give a name for a new one
-export SUBNET_NAME=YOUR_SUBNET_NAME
-
-# Minimum size required for Satellite
-export VSI_PROFILE=bx2-4x16
-
-# OS required for Satellite: ibm-redhat-7-0-64-minimal-for-vsi
-export VSI_IMAGE_ID=a573bfb9-4e55-481f-9060-31d757155ded 
-
 
 ##########################################################
 # Info: OpenShift Cluster
