--- a/satellite/satellite.env
+++ b/satellite/satellite.env
@@ -3,7 +3,7 @@
 # Satellite
 ##########################################################
 
-export LOCATION_NAME=bert
+export LOCATION_NAME=beaulieu
 
 export SAT_MANAGED_FROM=lon
 
