--- a/satellite/satellite.env
+++ b/satellite/satellite.env
@@ -3,7 +3,7 @@
 # Satellite
 ##########################################################
 
-export LOCATION_NAME=beaulieu
+export LOCATION_NAME=sophia
 
 export SAT_MANAGED_FROM=lon
 
@@ -19,9 +19,3 @@ export COUNT_END=03
 
 # Region to provision the VSIs
 export VPC_ZONE=eu-de
-
-##########################################################
-# Info: OpenShift Cluster
-##########################################################
-
-# export CLUSTER_NAME=mysatellite-cluster
