--- a/sysdig/sysdig-benchmark-runner-configmap.yaml
+++ b/sysdig/sysdig-benchmark-runner-configmap.yaml
@@ -14,4 +14,4 @@ data:
 
   # The endpoint to the Sysdig collector
   # Required: yes
-  collector_endpoint: ingest.eu-de.monitoring.cloud.ibm.com
+  collector_endpoint: https://eu-de.monitoring.cloud.ibm.com
