--- a/sysdig/sysdig-host-analyzer-configmap.yaml
+++ b/sysdig/sysdig-host-analyzer-configmap.yaml
@@ -19,7 +19,7 @@ data:
 
   # The endpoint to the Scanning Analysis collector
   # Required: yes
-  collector_endpoint: ingest.eu-de.monitoring.cloud.ibm.com/internal/scanning/scanning-analysis-collector
+  collector_endpoint: https://eu-de.monitoring.cloud.ibm.com/internal/scanning/scanning-analysis-collector
   
   # uncomment the following line to use a self-signed cert for backend communication
   # ssl_verify_certificate: "false"
