--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,15 @@ iam/account-user-*.csv
 
 satellite/satellite.env
 
-**/.terraform
+# Local .terraform directories
+**/.terraform/*
+# .tfstate files
 *.tfstate
-*.tfstate.backup
+*.tfstate.*
 *.terraform.lock.hcl
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+#
+# *.tfvars
