--- a/openshift/nlb/nlb-tcp.yaml
+++ b/openshift/nlb/nlb-tcp.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nlb-tcp
-  namespace: default
+  # namespace: default
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
