--- a/openshift/nlb/udp.yaml
+++ b/openshift/nlb/udp.yaml
@@ -2,8 +2,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: udp-nlb-4500
-  namespace: lionel-nlb
+  name: nlb-tcp
+  # namespace: default
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
