--- a/openshift/nlb/nlb-udp.yaml
+++ b/openshift/nlb/nlb-udp.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nlb-tcp
+  name: nlb-udp
   # namespace: default
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
