added healthceck and removed local traffic policy

--- a/openshift/nlb/nlb-udp.yaml
+++ b/openshift/nlb/nlb-udp.yaml
@@ -7,11 +7,12 @@ metadata:
   annotations:
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
-    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-node-selector: "<key>=<value>"
+    # Optional Annotations:
+    # service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-node-selector: "<key>=<value>"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-node-selector: "ibm-cloud.kubernetes.io/internal-ip=10.242.64.15"
-    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets: "0797-91785612-96be-48eb-a42b-448c79975ef7"
-    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "eu-gb-2"
-    #optional service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-health-check-udp: "<tcp_port"
+    # service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets: "0797-91785612-96be-48eb-a42b-448c79975ef7"
+    # service.kubernetes.io/ibm-load-balancer-cloud-provider-zone: "eu-gb-2"
+    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-health-check-udp: "8080"
   labels:
     app: mytodo
     tier: frontend
@@ -25,4 +26,4 @@ spec:
     port: 4500
     protocol: UDP
     targetPort: 4500
-  externalTrafficPolicy: Local
+  # externalTrafficPolicy: Local
