--- a/openshift/test-app-ingress.yml
+++ b/openshift/test-app-ingress.yml
@@ -3,14 +3,14 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: ns-1
+  name: ns-ingress
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: test
-  namespace: ns-1
+  namespace: ns-ingress
   labels:
     app: test
 spec:
@@ -25,7 +25,8 @@ spec:
     spec:
       containers:
       - name: mtls-test
-        image: ibmcom/hello
+        # image: ibmcom/hello
+        image: openshift/hello-openshift
         imagePullPolicy: Always
         resources:
           requests:
@@ -36,7 +37,7 @@ spec:
             memory: 384Mi
         ports:
         - name: http
-          containerPort: 80
+          containerPort: 8080
           protocol: TCP
         livenessProbe:
           httpGet:
@@ -51,15 +52,15 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: test
-  namespace: ns-1
+  name: hello-openshift
+  namespace: ns-ingress
   labels:
     app: test
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
     - port: 80
-      targetPort: http
+      targetPort: 8080
       protocol: TCP
       name: http
   selector:
@@ -69,10 +70,10 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: test
+  name: hello-openshift
   labels:
     app: test
-  namespace: ns-1
+  namespace: ns-ingress
 spec:
   tls:
     - hosts:
@@ -86,6 +87,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: test
+                name: hello-openshift
                 port:
-                  number: 80
+                  number: 8080
