--- a/openshift/ingress-route/test-app-route.yml
+++ b/openshift/ingress-route/test-app-route.yml
@@ -4,6 +4,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: ns-route
+  labels:
+    environment: production
 
 ---
 apiVersion: apps/v1
@@ -70,7 +72,7 @@ metadata:
   name: test
   namespace: ns-route
 spec:
-  host: hello-ns-route.iro-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
+  host: hello-ns-route.iro-odf-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
   port:
     targetPort: 8080
   tls:
