fix satellite cli

--- a/satellite/satellite.env
+++ b/satellite/satellite.env
@@ -3,15 +3,17 @@
 # Satellite
 ##########################################################
 
-export LOCATION_NAME=sophia
+export LOCATION_NAME=test4
 
-export SAT_MANAGED_FROM=lon
+export SAT_MANAGED_FROM=fra
 
 # Minimum vCPU/RAM size
+# CLI to retrieve profiles: ibmcloud is in-prs
 export VSI_PROFILE=bx2-4x16
 
-# Operationg System: ibm-redhat-7-0-64-minimal-for-vsi
-export VSI_IMAGE_ID=a573bfb9-4e55-481f-9060-31d757155ded 
+# Operationg System: ibm-redhat-8-6-minimal-amd64-4
+# CLI to list images: ibmcloud is images
+export VSI_IMAGE_ID=r010-1bfee58e-0170-4a57-9592-c3da671983f8
 
 # Number of control planes/workers
 export COUNT_START=01
