--- a/satellite/satellite.env
+++ b/satellite/satellite.env
@@ -3,7 +3,7 @@
 # Satellite
 ##########################################################
 
-export LOCATION_NAME=test4
+export LOCATION_NAME=test8
 
 export SAT_MANAGED_FROM=fra
 
@@ -11,8 +11,8 @@ export SAT_MANAGED_FROM=fra
 # CLI to retrieve profiles: ibmcloud is in-prs
 export VSI_PROFILE=bx2-4x16
 
-# Operationg System: ibm-redhat-8-6-minimal-amd64-4
-# CLI to list images: ibmcloud is images
+# OS: ibm-redhat-8-6-minimal-amd64-4
+# List OS: ibmcloud is images
 export VSI_IMAGE_ID=r010-1bfee58e-0170-4a57-9592-c3da671983f8
 
 # Number of control planes/workers
