--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ satellite/satellite.env
 
 # Local .terraform directories
 **/.terraform/*
+# Generated terraform scripts from Terraformer
+**/generated
 # .tfstate files
 *.tfstate
 *.tfstate.*
