--- a/openshift/ingress-route/test-public-lb.yml
+++ b/openshift/ingress-route/test-public-lb.yml
@@ -51,8 +51,9 @@ metadata:
   labels:
     app: test
   annotations:
-    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-load-balancer"
+    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-public-lb"
     service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
+    # service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "private"
 spec:
   type: LoadBalancer
   selector:
