--- a/openshift/ingress-route/test-app-route.yml
+++ b/openshift/ingress-route/test-app-route.yml
@@ -72,7 +72,8 @@ metadata:
   name: test
   namespace: ns-route
 spec:
-  host: hello-ns-route.private-x8hmsq-roks-483cccd2f0d38128dd40d2b711142ba9-i000.eu-de.containers.appdomain.cloud
+  host: hello-ns-route.icn-n4rnib-roks-483cccd2f0d38128dd40d2b711142ba9-0000.eu-de.containers.appdomain.cloud
+  # host: hello.lionelmace.com
   port:
     targetPort: 8080
   tls:
