--- a/odm/roks-values-internaldb.yaml
+++ b/odm/roks-values-internaldb.yaml
@@ -6,8 +6,8 @@ image:
   repository: cp.icr.io/cp/cp4a/odm
 internalDatabase:
   persistence:
-    enabled: false
-    useDynamicProvisioning: false
+    enabled: true
+    useDynamicProvisioning: true
   populateSampleData: true
   runAsUser: ''
 license: true
