--- a/openshift/openshift-rbac1-clusterrolebinding.yml
+++ b/openshift/openshift-rbac1-clusterrolebinding.yml
@@ -5,7 +5,7 @@ metadata:
 subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
-    name: 'IAM#lionel.mace@gmail.com'
+    name: 'IAM#first.last@gmail.com'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
