--- a/openshift/openshift-rbac3-rolebinding.yml
+++ b/openshift/openshift-rbac3-rolebinding.yml
@@ -6,7 +6,7 @@ metadata:
 subjects:
   - kind: User
     apiGroup: rbac.authorization.k8s.io
-    name: 'IAM#lionel.mace@gmail.com'
+    name: 'IAM#first.last@gmail.com'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
