removed deactivated passwords

--- a/event-streams/credentials.properties
+++ b/event-streams/credentials.properties
@@ -10,7 +10,7 @@ bootstrap.servers=kafka-2.mh-bqtfgjgwchbgyknjvyhm-4c201a12d7add7c99d2b22e361c6f1
 
 security.protocol=SASL_SSL
 sasl.mechanism=PLAIN
-sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="thx7CcjnfAr_UtLs7K2TZv4gECgnxzKdn3DUHQh88apD";
+sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required username="token" password="XXXXXXXXX";
 
 # TLS defaults (usually fine with public CA certs)
 ssl.protocol=TLSv1.2
