--- a/openshift/nlb/nlb-tcp-public-hello.yaml
+++ b/openshift/nlb/nlb-tcp-public-hello.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: test-nlb
+  name: nlb-hello
   labels:
     environment: production
 
@@ -12,7 +12,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: test-public
-  namespace: test-nlb
+  namespace: nlb-hello
   labels:
     app: test
 spec:
@@ -45,16 +45,23 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: public-nlb-eu-de-1
-  namespace: test-nlb
+  name: public-nlb-hello
+  namespace: nlb-hello
   annotations:
+    service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-lb-name: "my-hello-nlb"
+    # Required annotations for IBM Cloud NLB
     service.kubernetes.io/ibm-load-balancer-cloud-provider-enable-features: "nlb"
+    # Required for private NLBs (Default is public)
     service.kubernetes.io/ibm-load-balancer-cloud-provider-ip-type: "public"
+    # Required for private NLBs, optional for public NLBs
+    # service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-subnets
+    # Optional customer-managed security group to add to the VPC load balancer.
     # service.kubernetes.io/ibm-load-balancer-cloud-provider-vpc-security-group: "r010-326cfb84-24e9-4fdc-a252-d1d5b738c1e7"
   labels:
     app: test-public
 spec:
   type: LoadBalancer
+  externalTrafficPolicy: Cluster # Specify Cluster or Local (to preserve the source IP address of client requests).
   selector:
     app: test
   ports:
